<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/viewBackgroundColor"
            android:fadingEdge="none"
            android:fadingEdgeLength="0dp"
            android:orientation="vertical"
            android:scrollbars="none">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/base_margin"
            android:paddingLeft="@dimen/half_margin"
            android:paddingRight="@dimen/half_margin"
            android:paddingTop="@dimen/base_margin">

        <TextView
                style="@style/SettingTitleStyle"
                android:text="@string/setting_base"/>

        <View
                style="@style/VerticalDividerStyle"
                android:layout_marginTop="@dimen/half_margin"/>

        <wb.app.seek.widgets.SettingItemView
                android:id="@+id/browserInAppView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sivChecked="true"
                app:sivShowCheck="true"
                app:sivSubText="@string/setting_browser_title"
                app:sivText="@string/setting_browser_summary"/>

        <wb.app.seek.widgets.SettingItemView
                android:id="@+id/nightModeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:sivChecked="false"
                app:sivShowCheck="true"
                app:sivText="@string/night_mode_title"/>

    </LinearLayout>

</ScrollView>